--- a/style.css
+++ b/style.css
@@ -148,6 +148,10 @@ button:hover {
   width: 30px;
 }
 
+#tags{
+  display: none;
+}
+
 .tags{
   position: relative;
   width: 1105px;
@@ -267,7 +271,6 @@ button:hover {
 .Review{
   display: flex;
   justify-content: center;
-
   flex-direction: column;
 }
 
@@ -465,9 +468,9 @@ button:hover {
   box-shadow: 4px 4px 8px rgba(0,0,0,0.25);
   background: var(--color-bg-light); 
   margin-bottom: 20px;   
-  display:flex;
-  align-items:center;
-  justify-content:center; 
+  display: flex;
+  align-items: center;
+  justify-content: center; 
 }
 
 .Reels_item iframe {
@@ -709,7 +712,7 @@ button:hover {
   display: flex;
   align-items: center;      /* по вертикали */
   justify-content: center;  /* по горизонтали */
-
+  text-align: center;
 }
 
 .link_tg_b{
@@ -939,3 +942,114 @@ footer{
   opacity: 1;
   pointer-events: auto;
 }
+
+/* скрываем чекбокс */
+#menu__toggle {
+  opacity: 0;
+}
+/* стилизуем кнопку */
+.menu__btn {
+  display: flex; /* используем flex для центрирования содержимого */
+  align-items: center;  /* центрируем содержимое кнопки */
+  position: fixed;
+  top: 30px;
+  left: 30px;
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+  z-index: 1;
+}
+/* добавляем "гамбургер" */
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: var(--color-bg-light);
+}
+.menu__btn > span::before {
+  content: '';
+  top: -8px;
+}
+.menu__btn > span::after {
+  content: '';
+  top: 8px;
+}
+
+/* контейнер меню */
+.menu__box {
+  display: block;
+  position: fixed;
+  visibility: hidden;
+  top: 0;
+  left: -100%;
+  width: 300px;
+  height: 100%;
+  margin: 0;
+  padding: 80px 0;
+  list-style: none;
+  background-color: var(--color-backgraund);
+  box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+}
+
+.menu__box img{
+  width: 30px;
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+
+#phone{
+  text-decoration: none;
+  color: var(--color-bg-light);
+}
+/* элементы меню */
+.menu__item {
+  display: block;
+  padding: 12px 24px;
+  color: var(--color-bg-light);
+  font-size: 20px;
+  text-decoration: none;
+}
+
+.menu__item:hover {
+  background-color: #CFD8DC;
+}
+
+#menu__toggle:checked ~ .menu__btn > span {
+  transform: rotate(45deg);
+}
+#menu__toggle:checked ~ .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0);
+}
+#menu__toggle:checked ~ .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu__box {
+  visibility: visible;
+  left: 0;
+}
+
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  transition-duration: .25s;
+}
+.menu__box {
+  transition-duration: .25s;
+}
+.menu__item {
+  transition-duration: .25s;
+}
+
+.hamburger-menu{
+  display: none;
+}
+
+.trust_dots{
+  display: none;
+}
+
