--- a/style_mobile.css
+++ b/style_mobile.css
@@ -440,7 +440,7 @@
         font-size: 15px;
         width: 80%;
         gap: 20%;
-        margin-top: 20px;
+        margin-top: 0;
     }
 
     .contact_info img{
