--- a/style_mobile.css
+++ b/style_mobile.css
@@ -356,6 +356,10 @@
         margin-top: 30px;
     }
 
+    .ex_img_phone{
+        width: 159px;
+    }
+
     .ex_img img{
         width: 300px;
     }
