--- a/style_mobile.css
+++ b/style_mobile.css
@@ -35,7 +35,7 @@
     
     .h1_content h1{
         font-size: 25px;
-        padding-left: 20px;
+        padding-left: 0;
         margin: 0;
         text-align: center;
     }
@@ -43,7 +43,14 @@
     .hero_content p{
         font-size: 15px;
         width: 180px;
-        text-align: center;
+        text-align: center; 
+    }
+
+    .hero_content{
+        padding-left: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .hero_content button{
@@ -51,10 +58,12 @@
         height: 60px;
         padding: 0 30px;
         margin: 0 auto;
+
     }
 
     .hero_content button p{
         font-size: 15px;
+        text-align: left;
     }
 
     .tags{
@@ -356,7 +365,7 @@
         margin-top: 30px;
     }
 
-    .ex_img_phone{
+    .ex_img_phone img{
         width: 159px;
     }
 
