--- a/style_mobile.css
+++ b/style_mobile.css
@@ -1,5 +1,11 @@
 @media (max-width: 768px) {
 
+    html, body {
+        width: 100%;
+        max-width: 100vw;
+        overflow-x: hidden; /* осторожно: скрывает горизонтальную полосу прокрутки — использовать если нет альтернатив */
+    }
+    
     .hamburger-menu{
         display: block;
         position: fixed;
@@ -335,6 +341,7 @@
 
     /* стрелки prev/next — позиционируем рядом с контейнером */
     .trust_control {
+        display: none;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
@@ -611,5 +618,8 @@
         height: 40px;
     }
     
+    #backToTop img{
+        width: 15px;
+    }
 }
 
