--- a/style_mobile.css
+++ b/style_mobile.css
@@ -280,19 +280,21 @@
         flex-direction: row;
     }
 
-    .Reviews, .Reels {
-  overflow-x: auto;
-  overflow-y: hidden;
-  -webkit-overflow-scrolling: touch; /* iOS инерция */
-  scroll-behavior: smooth;           /* плавный программный скролл */
-  touch-action: pan-y;               /* разрешаем вертикальный пан браузеру по умолчанию */
-  -ms-overflow-style: auto;
-  scrollbar-width: thin;
-}
-.Reviews_block, .Reels_item {
-  flex: 0 0 auto;    /* не растягиваемся, фиксируем в строчку */
-  min-width: 260px;  /* или ваша ширина слайда */
-}
+    .Reviews, .Reels, #trustGraphs {
+         display: flex;               /* или оставьте существующий flex */
+        gap: 12px;  
+        overflow-x: auto;
+        overflow-y: hidden;
+        -webkit-overflow-scrolling: touch; /* iOS инерция */
+        scroll-behavior: smooth;           /* плавный программный скролл */
+        touch-action: pan-y;               /* разрешаем вертикальный пан браузеру по умолчанию */
+        -ms-overflow-style: auto;
+        scrollbar-width: thin;  
+    }
+        .Reviews_block, .Reels_item, .trust_slide {
+        flex: 0 0 auto;    /* не растягиваемся, фиксируем в строчку */
+        min-width: 260px;  /* или ваша ширина слайда */
+    }
 
 
     .target h2 {
