--- a/style_mobile.css
+++ b/style_mobile.css
@@ -554,6 +554,8 @@
         text-align: center;
         justify-content: center;
         align-items: center;
+        width: 300px;
+        margin-top: -30px;
     }
 
     .feedback img{
