--- a/style_mobile.css
+++ b/style_mobile.css
@@ -460,6 +460,7 @@
         font-size: 15px;
         margin-bottom: 50px;
         text-align: center;
+        width: 300px;
     }
             
     .insta_row {
