--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ nav ul li a:hover {
   padding-left: 62px;
   padding-top: 50px;
   margin: 0;
+  padding-bottom: 30px;
 }
 
 .hero_content p{
@@ -375,8 +376,8 @@ button:hover {
 .arrow_buttons.right{ right: 8px; }
 
 .arrow_buttons button{
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
   padding: 0;
   border: none;
   background: transparent;
@@ -440,7 +441,7 @@ button:hover {
   .review_button{
     padding: 0 48px;
     overflow: hidden;
-    width: 340px;
+    width: 360px;
     margin: 0 auto;
   }
 
@@ -465,6 +466,11 @@ button:hover {
     pointer-events: none;
   }
 
+  .arrow_buttons button{
+    width: 35px;
+    height: 35px;
+    padding: 0;
+  }
 }
 
 .team{
@@ -548,8 +554,17 @@ button:hover {
   height: 359px;
   border-radius: 20px;
   background-color: var(--color-primary);
+  overflow: hidden;
 }
 
+.backstage .back-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;        /* ключевая строка: покрытие без искажения */
+  object-position: center;  /* центрирование фокуса кадра */
+  display: block;           /* убирает пробелы/отступы под img */
+}
+  
 .target {
   display: flex;
   flex-direction: column;
@@ -1048,14 +1063,14 @@ header {
   width: 300px;
   height: 100%;
   margin: 0;
-  padding: 80px 0;
+  padding: 100px 0;
   list-style: none;
   background-color: var(--color-primary);
   box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
 }
 
 .menu__box img{
-  width: 25px;
+  width: 20px;
   padding-top: 10px;
   margin-left: 20px;
   margin-bottom: 0;
@@ -1064,6 +1079,7 @@ header {
 #phone{
   text-decoration: none;
   color: var(--color-bg-light);
+  font-size: 15px;
 }
 /* элементы меню */
 .menu__item {
@@ -1119,8 +1135,11 @@ header {
   visibility: visible; 
 }
 
+#logo_menu{
+  padding-top: 30px;
+}
 #logo_menu img{
-  width: 100px;
+  width: 200px;
 }
 
 .trust_dots{
