--- a/style_mobile.css
+++ b/style_mobile.css
@@ -214,7 +214,7 @@
     
     .Reviews_list{
         padding-left: 0;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
     }
 
     .Review h2{
@@ -226,7 +226,7 @@
     }
 
     .Review{
-        width: 95%;
+        width: 100%;
 
     }
 
@@ -237,12 +237,13 @@
     .Reviews_list{
         padding-left: 20px;
         font-size: 11px;
-        width: 220px;
+        width: 235px;
         height: auto;
+        line-height: 16px;
     }
 
     .Reviews_list p{
-        width: 200px;
+        width: 225px;
     }
 
     /* стрелки поверх, слева/справа */
@@ -259,7 +260,7 @@
     
     .team h2{
         font-size: 20px;
-        padding-top: 100px;
+        padding-top: 50px;
     }
 
     .teams{
@@ -305,8 +306,8 @@
     }
 
     .backstage{
-        margin-bottom: 100px;
-        margin-top: 100px;
+        margin-bottom: 50px;
+        margin-top: 70px;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 5px;
@@ -315,11 +316,20 @@
     .backstage div{
         width: 160px;
         height: 160px;
-
+        overflow: hidden;
     }
+
+    .backstage .back-item img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;        /* ключевая строка: покрытие без искажения */
+        object-position: center;  /* центрирование фокуса кадра */
+        display: block;           /* убирает пробелы/отступы под img */
+    }
+
     .target h2 {
         font-size: 20px;
-        padding-top: 100px;
+        padding-top: 30px;
     }
 
     .target h3 {
@@ -375,7 +385,6 @@
         background: var(--color-backgraund);
         border:none;
         padding:0;
-        margin-bottom: 50px;
     }
     .trust_dot[aria-current="true"], .trust_dot.active {
         background: var(--color-primary);
@@ -660,6 +669,10 @@
 
     .footer_nav nav{
         display: none;
+    }
+
+    .footer_nav img{
+        width: 200px;
     }
 
     #backToTop {
